--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
 # Pinned to a stable, widely compatible set
 streamlit==1.36.0
-rdkit-pypi==2022.9.5
+rdkit ==2022.9.5
 scikit-learn==1.3.2
 pandas==2.2.2
 numpy==1.26.4
